# parsebox

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  design.md  pyproject.toml  requirements.txt
parsebox/: dataset.py  identity.py  models.py  storage.py
parsebox/agent/: __init__.py  context.py  prompts.py  session.py  tools.py
parsebox/cli/: __init__.py  app.py  chat.py  display.py
parsebox/extract/: __init__.py  engine.py  prompt.py
parsebox/extract/strategies/: default.py
parsebox/ingest/: __init__.py  registry.py
parsebox/ingest/parsers/: csv_parser.py  markdown.py  pdf.py  plaintext.py
parsebox/query/: __init__.py  engine.py
parsebox/samples/: __init__.py
parsebox/samples/invoices/: __init__.py  invoice_001.txt  invoice_002.txt  invoice_003.txt  invoice_004.txt  (+1 more)
parsebox/schema/: __init__.py  validation.py
parsebox/store/: __init__.py  registry.py
parsebox/web/: __init__.py  server.py
sample_data/startup_employees/: employee_001.txt  employee_002.txt  employee_003.txt  employee_004.txt  employee_005.txt  employee_006.txt  employee_007.txt  employee_008.txt  org_structure.md  team_roster.csv
sample_data/vc_deal_memos/: codeweave.txt  deal_pipeline.csv  farmvision.txt  greenloop.txt  leapfrog_edu.txt  mediq_health.txt  nightowl.txt  novastream_ai.txt  paysync.txt  petajoule.txt  q4_sector_notes.md  urbanpulse.txt  vaultchain.txt
tests/: test_dataset.py  test_export_import.py  test_extract.py  test_identity.py  test_ingest.py  test_models.py  test_query.py  test_samples.py  test_schema.py  test_storage.py  test_store.py
(+16 files in other folders)
