[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parsebox"
version = "0.2.0"
description = "Turn unstructured documents into clean, queryable structured data -- powered by Claude."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.52",
    "claude-agent-sdk>=0.1",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.11",
    "duckdb>=1.1",
    "pyarrow>=19.0",
    "pandas>=2.2",
    "pypdf>=6.0",
    "litellm>=1.55",
    "instructor>=1.8",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
parsebox = "parsebox.cli.app:main"

[tool.setuptools.packages.find]
include = ["parsebox*"]
